<resources>
    <string name="app_name">calculadora</string>

    <string name="buttonC">C</string>
    <string name="buttonMaisMenos">+/-</string>
    <string name="buttonPercentual">%</string>
    <string name="buttonDivisao">/</string>

    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonMultiplicacao">X</string>

    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="buttonAdicao">+</string>

    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="buttonSubtracao">-</string>

    <string name="button0">0</string>
    <string name="buttonPonto">.</string>
    <string name="buttonIgual">=</string>
</resources>
