<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="right"
        android:padding="10dp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/buttonC"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btnMaisMenos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/buttonMaisMenos"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/buttonPercentual"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/buttonDivisao"
            android:textColor="@color/white"
            android:textSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/button7"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/button8"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/button9"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/buttonMultiplicacao"
            android:textColor="@color/white"
            android:textSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/button4"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/button5"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/button6"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/buttonAdicao"
            android:textColor="@color/white"
            android:textSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/button1"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/button2"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/button3"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/buttonSubtracao"
            android:textColor="@color/white"
            android:textSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1.5"
            android:background="@color/orange"
            android:text="@string/button0"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btnPonto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1.5"
            android:background="@color/orange"
            android:text="@string/buttonPonto"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/buttonIgual"
            android:textColor="@color/white"
            android:textSize="40dp" />
    </LinearLayout>

</LinearLayout>